--- a/WEB NYC/sugesstion.html
+++ b/WEB NYC/sugesstion.html
@@ -17,10 +17,10 @@
 
 <!-- navbar start -->
     <div class="topnav" id="myTopnav">
-        <a href="index.html">Tentang Kami</a>
-        <a href="sales.html">Penjualan</a>
-        <a href="produk.html">Produk</a>
-        <a href="suggestion.html">Saran</a>
+        <a href="index.html">About Us</a>
+        <a href="sales.html">Sales</a>
+        <a href="produk.html">Product</a>
+        <a href="suggestion.html">Suggestion</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
